# litmus

./: AGENTS.md  BUSINESS.md  LITMUS_SPEC.md  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
examples/model-regression/: suite.json
examples/model-regression/cases/: uses-finalize.json
examples/model-regression/runs/uses-finalize/: haiku-4.5.json  opus-4.8.json
examples/signal-scout/: baseline.json  signal-scout.schema.json  suite.json
examples/signal-scout/cases/: 01-classify-solo-maintainer.json  02-segments-have-no-opener.json
examples/signal-scout/runs/classify-solo-maintainer-as-individual/: sample-01.json
examples/signal-scout/runs/segments-never-get-openers/: sample-01.json
litmus/: __init__.py  assertions.py  case.py  cli.py  fetch.py  gate.py  index.py  jsonpath.py  judge.py  matrix.py  models.py  report.py  report_html.py  runner.py  schema.py
litmus/adapters/: __init__.py  claude_code.py  transcript.py
skills/litmus/: SKILL.md
skills/litmus/references/: assertions.md  case-format.md  trust-architecture.md
tests/: test_engine.py  test_m2_m6.py
