[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "litmus-ci"
version = "0.1.0"
description = "Red/green CI for prompt-ware. Test the behavior your scripts' unit tests can't reach."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Oren Segal" }]
keywords = ["claude-code", "skills", "llm", "eval", "regression-testing", "prompt-engineering", "ci"]
dependencies = []  # engine is stdlib-only and dependency-free by design

[project.optional-dependencies]
yaml = ["pyyaml>=6"]   # optional: author cases in YAML instead of JSON
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/OrenSegal/litmus"
Repository = "https://github.com/OrenSegal/litmus"

[project.scripts]
litmus = "litmus.cli:main"

[tool.setuptools.packages.find]
include = ["litmus*"]
